RESTFULL withut detail tables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@192.168.99.100:1521/ORCLCDB.localdomain
-spring.datasource.username=dummy
-spring.datasource.password=dummy
+spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521/ORCLCDB.localdomain
+spring.datasource.username=anto
+spring.datasource.password=anto
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
