test @query in demande

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Oracle settings
-spring.datasource.url=jdbc:oracle:thin:@192.168.1.37/ORCLCDB.localdomain
-spring.datasource.username=remi
-spring.datasource.password=TVB992
+spring.datasource.url=jdbc:oracle:thin:@localhost/ORCLCDB.localdomain
+spring.datasource.username=anto
+spring.datasource.password=anto
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
